--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
-        <servlet-name>timetablecontroller</servlet-name>
-        <servlet-class>controller.TimetableController</servlet-class>
+        <servlet-name>LecturerTimetableController</servlet-name>
+        <servlet-class>controller.TimetableLecController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TimetableStuController</servlet-name>
+        <servlet-class>controller.TimetableStuController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AttandanceController</servlet-name>
+        <servlet-class>controller.AttandanceController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>timetablecontroller</servlet-name>
+        <servlet-name>LecturerTimetableController</servlet-name>
         <url-pattern>/lecturer/timetable</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TimetableStuController</servlet-name>
+        <url-pattern>/student/timetable</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AttandanceController</servlet-name>
+        <url-pattern>/attandance</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
