--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -6,9 +6,8 @@
     </servlet>
     <servlet>
         <servlet-name>TimetableStuController</servlet-name>
-        <servlet-class>controller.TimetableStuController</servlet-class>
+        <servlet-class>controller.student.TimetableStuController</servlet-class>
     </servlet>
-    
     <servlet>
         <servlet-name>LoginController</servlet-name>
         <servlet-class>controller.auth.LoginController</servlet-class>
@@ -25,6 +24,22 @@
         <servlet-name>LecturerAttController</servlet-name>
         <servlet-class>controller.lecturer.AttController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ListController</servlet-name>
+        <servlet-class>controller.student.ListController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>InsertController</servlet-name>
+        <servlet-class>controller.student.InsertController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>UpdateController</servlet-name>
+        <servlet-class>controller.student.UpdateController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteController</servlet-name>
+        <servlet-class>controller.student.DeleteController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LecturerTimetableController</servlet-name>
         <url-pattern>/lecturer/timetable</url-pattern>
@@ -33,7 +48,6 @@
         <servlet-name>TimetableStuController</servlet-name>
         <url-pattern>/student/timetable</url-pattern>
     </servlet-mapping>
-    
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -46,10 +60,25 @@
         <servlet-name>HomeController</servlet-name>
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
-    
     <servlet-mapping>
         <servlet-name>LecturerAttController</servlet-name>
         <url-pattern>/lecture/takeatt</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ListController</servlet-name>
+        <url-pattern>/student/list</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InsertController</servlet-name>
+        <url-pattern>/student/insert</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UpdateController</servlet-name>
+        <url-pattern>/student/update</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteController</servlet-name>
+        <url-pattern>/student/delete</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
