--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -50,15 +50,15 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <url-pattern>/view/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
-        <url-pattern>/logout</url-pattern>
+        <url-pattern>/view/logout</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HomeController</servlet-name>
-        <url-pattern>/home</url-pattern>
+        <url-pattern>/view/home</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>LecturerAttController</servlet-name>
