--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -21,10 +21,6 @@
         <servlet-class>controller.home.HomeController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>LecturerAttController</servlet-name>
-        <servlet-class>controller.lecturer.AttController</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>ListController</servlet-name>
         <servlet-class>controller.student.ListController</servlet-class>
     </servlet>
@@ -43,6 +39,18 @@
     <servlet>
         <servlet-name>AttendanceReport</servlet-name>
         <servlet-class>controller.student.AttendanceReport</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ViewAttendanceReport</servlet-name>
+        <servlet-class>controller.lecturer.ViewAttendanceReport</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TakeAttendanceInDay</servlet-name>
+        <servlet-class>controller.lecturer.TakeAttendanceInDay</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TakeAttendanceController</servlet-name>
+        <servlet-class>controller.lecturer.TakeAttendanceController</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>LecturerTimetableController</servlet-name>
@@ -65,10 +73,6 @@
         <url-pattern>/view/home</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>LecturerAttController</servlet-name>
-        <url-pattern>/lecture/takeatt</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>ListController</servlet-name>
         <url-pattern>/student/list</url-pattern>
     </servlet-mapping>
@@ -86,7 +90,19 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>AttendanceReport</servlet-name>
-        <url-pattern>/student/attendanceReport</url-pattern>
+        <url-pattern>/student/attendance/report</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ViewAttendanceReport</servlet-name>
+        <url-pattern>/lecturer/viewattendancereport</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TakeAttendanceInDay</servlet-name>
+        <url-pattern>/lecturer/takeattendanceinday</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TakeAttendanceController</servlet-name>
+        <url-pattern>/lecturer/takeattendance</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
