--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>student.TimetableStuController</servlet-name>
         <servlet-class>controller.student.TimetableStuController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>lecturer.attendance.addAttendance.jsp</servlet-name>
+        <jsp-file>/view/lecturer/attendance/addAttendance.jsp</jsp-file>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginController</servlet-name>
         <url-pattern>/login</url-pattern>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>student.TimetableStuController</servlet-name>
         <url-pattern>/student/timetable</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>lecturer.attendance.addAttendance.jsp</servlet-name>
+        <url-pattern>/lecturer/addAttendance</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
